syntax = "proto3";

package pb;

option go_package = "github.com/colin-mcl/stocks/pb";

import "quote.proto";

message yhResponse {
    Quote quoteResponse = 1;
}